Changed to use wildfly (rather than thorntail) Signed-off-by:Phillip Kruger <phillip.kruger@gmail.com>